--- a/client/package.json
+++ b/client/package.json
@@ -3,61 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "classnames": "^2.2.6",
-    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-children-addons": "^1.0.8",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-react": "^7.0.0",
-    "animate.css": "^3.7.0",
-    "babel-loader": "^8.0.5",
-    "bootstrap": "^4.3.1",
-    "css-loader": "^2.1.1",
-    "dotenv": "^7.0.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "gh-pages": "^2.0.1",
-    "lodash": "^4.17.11",
-    "node-sass": "^4.11.0",
-    "react-scripts": "2.1.8",
-    "react-test-renderer": "^16.8.6",
-    "reading-time": "^1.2.0",
-    "redux-devtools": "^3.5.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
-    "style-loader": "^0.23.1",
-    "webpack": "4.28.3",
-    "webpack-cli": "^3.3.0"
-  },
-  "peerDependencies": {
-    "classnames": "^2.2.6",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-children-addons": "^1.0.8",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.0.1",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dist": "webpack --config webpack.prod.js",
-    "prepublish": "npm run dist",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
