--- a/package.json
+++ b/package.json
@@ -19,9 +19,19 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cancan": "^3.1.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.16.2",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
