--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.8"
+    "mongoose": "^5.6.8",
+    "mongoose-unique-validator": "^2.0.3",
+    "react-router-dom": "^5.0.1"
   }
 }
